fix for PDT+, topembed, nsbranch+ bug 78857, an assertion caused by the event pool code. r=heikki, sr=jst